# clean-rs

./: Cargo.toml  README.MD  USAGE.md  clean.bat
src/: cleaner.rs  cleanup_items.rs  error.rs  lib.rs  main.rs  tui.rs
src/platform/: mod.rs  unix.rs  windows.rs
tests/: integration_test.rs
