[package]
name = "clean-rs"
version = "0.3.0"
edition = "2021"
authors = ["wxlv"]
description = "A system cleaning tool for Rust with TUI interface"
license = "MIT"
repository = "https://github.com/wxlv/clean-rs"

[[bin]]
name = "clean-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "shellapi",
    "wincon",
    "winbase",
] }

[dev-dependencies]
tempfile = "3.10"